loki/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
  labels:
    app: loki
spec:
  type: NodePort
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      nodePort: 30310
  selector:
    app: loki
